Reduced user name margin on large screens.
Minor refactoring.

--- a/src/components/pages/PageHome/UsersContainer/Users/User/User.css
+++ b/src/components/pages/PageHome/UsersContainer/Users/User/User.css
@@ -82,7 +82,7 @@
 }
 
 /* Large devices */
-@media (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1199px) {
     .name {
         margin-left: 2rem;
     }
